# bsky-extraction

./: LICENSE  README.md  pyproject.toml
config/: readme.md
data/: readme.md
script/: get_accessJwt.py  keyword_extraction.py
src/bsky_extraction/: __init__.py
