[project]
name = "bsky-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "atproto>=0.0.61",
    "bertopic>=0.17.3",
    "jupyter>=1.1.1",
    "pandas>=2.3.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
]
